Bug 155048 - AntiAliasing property in FilterData has no effect since version 7.5
Summary: AntiAliasing property in FilterData has no effect since version 7.5
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-04-27 13:20 UTC by Mike Kaganski
Modified: 2023-04-28 08:46 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-04-27 13:20:18 UTC
Since version 6.2, graphic exporter filter honored AntiAliasing property passed in FilterData [1].

However, since 7.5, it has no effect on the output. The code provided in [1] produces AAed bitmap, irrespective of the value passed in the AntiAliasing property.

Regression after commit 444bf8710d5da7b584fbcb94693e4ed8d2e29297.

[1] https://vmiklos.hu/blog/uno-api-improvements.html
Comment 1 Mike Kaganski 2023-04-27 14:16:03 UTC
https://gerrit.libreoffice.org/c/core/+/151109
Comment 2 Commit Notification 2023-04-28 04:46:08 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1b85a555d3ee618b542dce414687c97f934b8b56

tdf#155048: forward AntiAliasing to drawinglayer also in temporary case

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-04-28 08:46:46 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/65be723517b0871bdf35ca072b5cf2afa8c4b3e0

tdf#155048: forward AntiAliasing to drawinglayer also in temporary case

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.