tdf#155048: forward AntiAliasing to drawinglayer also in temporary case

Commit 444bf8710d5da7b584fbcb94693e4ed8d2e29297 (Update handling of
AntiAliasing settings and processor2d, 2022-11-08) made respective
changes so that SvtOptionsDrawinglayer::SetAntiAliasing forwards the
setting to drawinglayer. However, it only happened in non-temporary
case, which is fixed now.

Change-Id: I66f5630dde759e3a3aa305ef38f60c8e24e6330e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151109
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>